# xlabhw1

./: README.md
wangzhihan_homework1/: CMakeLists.txt  README.md
wangzhihan_homework1/src/: algebra.c  main.c
wangzhihan_homework1/wangzhihan_hw1/doc/: thinking.md
wangzhihan_homework1/wangzhihan_hw1/inc/: algebra.h
